--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     
     <main id="app">
-        {{risultato}}
+        <h2 v-for="(element) in risultato"> {{element}} </h2>
     </main>
 
     <script src="main.js"></script>
